# MCS

./: .gitignore  CMakeLists.txt  README.md  result.s
src/: CMakeLists.txt  main.cpp
src/AST/: CMakeLists.txt  node.cpp  node.h  nodes.h
src/AST/ast_utils/: utils.cpp  utils.h
src/AST/block/: block.cpp  block.h
src/AST/comp_unit/: comp_unit.cpp  comp_unit.h
src/AST/exp/: binary_exp.cpp  binary_exp.h  exp.cpp  exp.h
src/AST/func/: func_def.cpp  func_def.h  function.cpp  function.h
src/AST/lval/: lval.cpp  lval.h
src/AST/node/: node.h
src/AST/number/: number.cpp  number.h
src/AST/pub/: code_gen_helper.cpp  code_gen_helper.h  node.h  utils.cpp  utils.h
src/AST/start/: start.cpp
src/AST/stmt/: ret_stmt.cpp  ret_stmt.h  stmt.cpp  stmt.h
src/AST/utils/: utils.cpp
src/AST/var/: var_def.cpp  var_def.h  var_def_list.cpp  var_def_list.h
src/IR/: CMakeLists.txt  basic_block.cpp  basic_block.h  code_block.h  context.cpp  context.h
src/IR/code_block/: code_block.cpp  code_block.h
src/IR/context/: context.cpp  context.h
src/IR/scope/: scope.cpp
src/IR/symbol/: symbol.cpp  symbol.h
src/IR/type/: cast.cpp  cast.h  type.cpp  type.h
src/LAP/: CMakeLists.txt
src/LAP/lexer/: lexer.cpp  lexer.l
src/LAP/parser/: parser.cpp  parser.hpp  parser.y
src/back_end/: CMakeLists.txt
src/back_end/allocation_order/: allocation_order.cpp
src/back_end/generator/: generator.cpp  generator.h
src/back_end/live_debug_variables/: live_debug_variables.cpp
src/back_end/reg_alloc/: reg_alloc.cpp  reg_alloc_base.cpp
src/front_end/: CMakeLists.txt
src/front_end/AST/: CMakeLists.txt  nodes.h
src/front_end/AST/block/: block.cpp  block.h
src/front_end/AST/comp_unit/: comp_unit.cpp  comp_unit.h
src/front_end/AST/const/: const_def.cpp  const_def.h  const_def_list.cpp  const_def_list.h
src/front_end/AST/exp/: binary_exp.cpp  exp.h  unary_exp.cpp
src/front_end/AST/exp/arith_exp/: arith_exp.cpp  arith_exp.h
src/front_end/AST/exp/binary_exp/: binary_exp.cpp  binary_exp.h
src/front_end/AST/exp/func_args_exp/: func_args_exp.cpp  func_args_exp.h
src/front_end/AST/exp/func_call_exp/: func_call_exp.cpp  func_call_exp.h
src/front_end/AST/exp/logic_exp/: logic_exp.cpp  logic_exp.h
src/front_end/AST/exp/rel_exp/: rel_exp.cpp  rel_exp.h
src/front_end/AST/exp/unary_exp/: unary_exp.cpp  unary_exp.h
src/front_end/AST/exp/var_exp/: var_exp.cpp  var_exp.h
src/front_end/AST/func/: func_def.cpp  func_def.h  func_params.cpp
src/front_end/AST/func/func_args/: func_args.cpp  func_args.h
src/front_end/AST/func/func_def/: func_def.cpp  func_def.h
src/front_end/AST/func/func_param/: func_param.cpp  func_param.h  func_params.cpp  func_params.h
src/front_end/AST/func/func_params/: func_params.cpp  func_params.h
src/front_end/AST/lval/: lval.cpp  lval.h
src/front_end/AST/lvalue/: lvalue.cpp  lvalue.h
src/front_end/AST/node/: node.h
src/front_end/AST/number/: number.cpp  number.h
src/front_end/AST/number/constant_table/: constant_table.cpp  constant_table.h
src/front_end/AST/number/float_num/: float_num.cpp  float_num.h
src/front_end/AST/number/int_num/: int_num.cpp  int_num.h
src/front_end/AST/start/: start.cpp  start.h
src/front_end/AST/stmt/: block_stmt.cpp  block_stmt.h  ret_stmt.cpp  ret_stmt.h  stmt.h
src/front_end/AST/stmt/assign_stmt/: assign_stmt.cpp  assign_stmt.h
src/front_end/AST/stmt/block_stmt/: block_stmt.cpp  block_stmt.h
src/front_end/AST/stmt/break_stmt/: break_stmt.cpp  break_stmt.h
src/front_end/AST/stmt/continue_stmt/: continue_stmt.cpp  continue_stmt.h
src/front_end/AST/stmt/if_else_stmt/: if_else_stmt.cpp  if_else_stmt.h
src/front_end/AST/stmt/null_stmt/: null_stmt.cpp  null_stmt.h
src/front_end/AST/stmt/ret_stmt/: ret_stmt.cpp  ret_stmt.h
src/front_end/AST/stmt/while_stmt/: while_stmt.cpp  while_stmt.h
src/front_end/AST/var/: var_def.cpp  var_def.h  var_def_list.cpp  var_def_list.h
src/front_end/AST/var/array_size/: array_size.cpp  array_size.h
src/front_end/AST/var/init_val/: init_val.cpp  init_val.h
src/front_end/IR/: CMakeLists.txt
src/front_end/IR/code_block/: code_block.cpp  code_block.h
src/front_end/IR/context/: context.cpp  context.h
src/front_end/IR/insertion_point/: insertion_point.cpp  insertion_point.h
src/front_end/IR/loop_info/: loop_info.cpp  loop_info.h
src/front_end/IR/operator/: operator.cpp  operator.h
src/front_end/IR/parameter/: parameter.cpp  parameter.h
src/front_end/IR/scope/: scope.cpp  scope.h
src/front_end/IR/symbol/: symbol.cpp  symbol.h
src/front_end/IR/symbol_table/: symbol_table.cpp  symbol_table.h
src/front_end/IR/type/: type.cpp  type.h
src/front_end/analyzer/: CMakeLists.txt
src/front_end/analyzer/lexer/: lexer.l
src/front_end/analyzer/parser/: parser.y
src/front_end/builder/: CMakeLists.txt
src/front_end/builder/branch/: branch.cpp  branch.h
src/front_end/builder/constant/: constant.cpp  constant.h
src/front_end/builder/function/: function.cpp  function.h
src/front_end/builder/instruction/: instruction.cpp  instruction.h
src/front_end/builder/memory/: memory.cpp  memory.h
src/front_end/builder/operation/: operation.cpp  operation.h
src/front_end/builder/public/: public.cpp  public.h
src/front_end/builder/variable/: variable.cpp  variable.h
src/front_end/code_gen/: CMakeLists.txt
src/front_end/code_gen/constant/: constant.cpp
src/front_end/code_gen/func/: func.cpp  func.h
src/front_end/code_gen/function/: function.cpp
src/front_end/code_gen/pub/: pub.cpp  pub.h
src/front_end/code_gen/public/: public.cpp  public.h
src/front_end/code_gen/var/: var.cpp  var.h
src/front_end/code_gen/variable/: variable.cpp
src/front_end/lib/: CMakeLists.txt  lib.cpp  lib.h
src/lexer_parser/: CMakeLists.txt  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
src/middle_end/: CMakeLists.txt
src/middle_end/loop_deletion/: loop_deletion.cpp
src/middle_end/mem2reg_pass/: mem2reg_pass.cpp  mem2reg_pass_helper.cpp
src/middle_end/pass_manager/: pass_manager.cpp  pass_manager.h
src/utils/: CMakeLists.txt  logger.cpp  logger.h
(+15 files in other folders)
